# DAQ-Technical-Assessment

./: brainstorming.md
firmware/: CMakeLists.txt  SensorBus.dbc  answer.txt
firmware/src/: main.cpp
telemetry/data-emulator/src/: battery_emulator.ts
telemetry/streaming-service/src/: exceptions.ts  server.ts
telemetry/ui/src/: App.css  App.tsx  live_value.tsx
